# proyect3_res_sopes

./: .gitignore  README.md  definiciones.note  docker-compose.yml  manual  notas.note  zot.note
api-rust/: Cargo.toml  Dockerfile  build.rs
api-rust/proto/: weather.proto
api-rust/src/: main.rs
go-services/: kafka-writer-service.yaml  rabbitmq-writer-service.yaml
go-services/go-server/: Dockerfile  go.mod  go.sum  main.go  main.go.backup  rabbitmq_writer.pb.go  rabbitmq_writer_grpc.pb.go
go-services/kafka-consumer/: Dockerfile  go.mod  go.sum  main.go
go-services/kafka-writer/: Dockerfile  go.mod  go.sum  kafka_writer.pb.go  kafka_writer.proto  kafka_writer_grpc.pb.go  main.go  main.go.backup
go-services/rabbitmq-consumer/: Dockerfile  go.mod  go.sum  main.go
go-services/rabbitmq-writer/: Dockerfile  go.mod  go.sum  main.go  main.go.backup  rabbitmq_writer.proto
grafana/: Dashboard proyecto3-1761190130567.json
kubernetes/: ingress.yaml  kafka-cluster.yaml  kafka-nodepool.yaml  rabbitmq-cluster.yaml  weather-topic.yaml
kubernetes/deployments/: api-rust-deployment.yaml  go-orchestrator-deployment.yaml  go-orchestrator-svc.yaml  kafka-consumer-deployment.yaml  kafka-writer-deployment.yaml  rabbitmq-consumer-deployment.yaml  rabbitmq-writer-deployment.yaml
kubernetes/services/: api-rust-service.yaml  go-orchestrator-service.yaml
locust/: locustfile.py
