[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.11"
